# postgres-django-react-app

./: LICENSE  README.md  pyproject.toml
server/: manage.py
server/main/: settings.py  urls.py
server/templateApp/: apps.py
